WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247362
Missing undef MESSAGE_CHECK in WebFrameProxy.cpp
https://bugs.webkit.org/show_bug.cgi?id=247362
Summary
Missing undef MESSAGE_CHECK in WebFrameProxy.cpp
Przemyslaw Gorszkowski
Reported
2022-11-02 06:39:33 PDT
Missing undef MESSAGE_CHECK in WebFrameProxy.cpp causes building errors when we add new files and try to compile unified build.
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2022-11-02 06:47:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/6033
EWS
Comment 2
2022-11-02 08:53:51 PDT
Committed
256233@main
(628f0ba433d8): <
https://commits.webkit.org/256233@main
> Reviewed commits have been landed. Closing PR #6033 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-11-02 08:54:19 PDT
<
rdar://problem/101863655
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug