Cherry-pick 256233@main (628f0ba433d8). https://bugs.webkit.org/show_bug.cgi?id=247362

Missing undef MESSAGE_CHECK in WebFrameProxy.cpp
    https://bugs.webkit.org/show_bug.cgi?id=247362

    Reviewed by Carlos Garcia Campos.

    Add missing #undef MESSAGE_CHECK at the end of the cpp file
    solves the problem with errors in unified builds.

    * Source/WebKit/UIProcess/WebFrameProxy.cpp:

    Canonical link: https://commits.webkit.org/256233@main